--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body style="background-color:Blue">
   
-<h1><p align="center" style="color:Yellow">HA HA....Bye da venna....</h1>
+<h1><p align="center" style="color:Yellow">...Bye ....</h1>
   <h1><a href="https://karthikk12.github.io/MyFirstRepo1/"><p align="right" style="color:black">Home Page</p></h1>
 
     </body>
