--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<h1 style="font-size:30px; color: Black"align="center"><---------------------------Data Mocker-------------------------------------></h1></br>
+<body style="background-color:#aaa9ad;">
+<h1 style="font-size:30px; color: Black"align="center"><-------------------------------------Data Mocker-------------------------------------></h1></br>
   <head lang="en">
   <meta charset="UTF-8">
   </head>
-<body>
+
 
   <form>
   
