--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
   
   
   
-  <h1 style="font-size:20px; " align="center">   <label ><b>Enter your Input :</b></label> <input type="text" name="message"   id="user_input" align="center"> <tab   > Email: <input type="checkbox" id="myCheck"></br>
+  <h1 style="font-size:20px; " align="center">   <label ><b>Enter your Input :</b></label> <input type="text" name="message"   id="user_input" align="center">  &nbsp &nbsp Email: <input type="checkbox"  id="myCheck" ></br>
+  
+  
+  
+  
+  
+  
   <h1 style="font-size:20px; " align="center">   <label ><b>Password : </b></label> <input type="text" name="message"   id="pass_word" align="center"> </br></br>
   </form>
 
