--- a/index.html
+++ b/index.html
@@ -29,14 +29,21 @@
 </br>
 </h1>
 <h1 style="font-size:20px; " align="center">  
-
+<style>
+p.ex1 {
+  margin-left: 70%;
+}
+</style>
   <label >Mocked Result: </label>
     </h1>
- <h1 style="font-size:20px; " align="left">     
+ <h1 style="font-size:20px; " align="left">    
+
+
   <p>Mocked User Name : <span id='display'></span></p>
   <p>Mocked Password : <span id='display2'></span></p>
   </br>
   </br>
+   <p class="ex1"> Mocked Email id: <span id='em_display1'></span></p>
   <p>Length of User Name : <span id='displayLen1'></span></p>
   <p>Length of Password : <span id='displayLen2'></span></p>
   
