--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ var ep_pass_num_change = ep_pass_capitalchar_change.split('0').join('4');
 var ep_pass_symbolchanger=ep_pass_num_change.split('#').join('^');
  
 
-        document.getElementById('em_display1').innerHTML = result;
+        document.getElementById('display').innerHTML = result;
          document.getElementById('display2').innerHTML = ep_pass_symbolchanger; document.getElementById('displayLen1').innerHTML = result.length;
           document.getElementById('displayLen2').innerHTML = ep_pass_symbolchanger.length;
          
