--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:#aaa9ad;">
-<h1 style="font-size:30px; color: Black"align="center"><-------------------------------------Data Mocker-------------------------------------></h1></br>
+<h1 style="font-size:35px; color: Black"align="center">Data Mocker</h1></br>
   <head lang="en">
   <meta charset="UTF-8">
   </head>
