--- a/index.html
+++ b/index.html
@@ -1,6 +1,32 @@
+
 <!DOCTYPE html>
 <html>
 <body style="background-color:#aaa9ad;">
+<style>
+/* Style the body */
+body {
+  font-family: Arial;
+  margin: 0;
+}
+
+/* Header/Logo Title */
+.header {
+  padding: 10px;
+  text-align: center;
+  background:#4682B4;
+  color: white;
+  font-size: 10px;
+}
+
+/* Page Content */
+.content {padding:20px;}
+</style>
+</head>
+<body>
+
+<div class="header">
+</div>
+
 <h1 style="font-size:35px; color: Black"align="center">Data Mocker</h1></br>
   <head lang="en">
   <meta charset="UTF-8">
@@ -13,7 +39,7 @@
   
   
   
-  <h1 style="font-size:20px; " align="center">   <label ><b>Enter your Input :</b></label> <input type="text" name="message"   id="user_input" align="center">  &nbsp &nbsp Email: <input type="checkbox"  id="myCheck" ></br>
+  <h1 style="font-size:20px; " align="center">   <label ><b>Enter your Input :</b></label> <input type="text" name="message"   id="user_input" align="center">  &nbsp &nbsp Email Format: <input type="checkbox"  id="myCheck" ></br>
   
   
   
@@ -141,6 +167,30 @@ var ep_pass_symbolchanger=ep_pass_num_change.split('#').join('^');
     
     
   </script>
+<style>
+/* Style the body */
+body {
+  font-family: Arial;
+  margin: 0;
+}
 
+/* Header/Logo Title */
+.Footer {
+  padding: 10px;
+  text-align: center;
+  background:#4682B4;
+  color: white;
+  font-size: 10px;
+}
+
+/* Page Content */
+.content {padding:20px;}
+</style>
+</head>
+<body>
+
+<div class="Footer">
+
+</div>
 </body>
 </html>
