--- a/index.html
+++ b/index.html
@@ -1,36 +1,12 @@
 
 <!DOCTYPE html>
 <html>
-<body style="background-color:#aaa9ad;">
-<style>
-/* Style the body */
-body {
-  font-family: Arial;
-  margin: 0;
-}
-
-/* Header/Logo Title */
-.header {
-  padding: 10px;
-  text-align: center;
-  background:#4682B4;
-  color: white;
-  font-size: 10px;
-}
-
-/* Page Content */
-.content {padding:20px;}
-</style>
-</head>
-<body>
-
-<div class="header">
-</div>
-
-<h1 style="font-size:35px; color: Black"align="center">Data Mocker</h1></br>
+<body style="background-color:White;">
+<h1 style="font-size:30px; color: Black"align="center">Data Mocker</h1></br>
   <head lang="en">
   <meta charset="UTF-8">
   </head>
+
 
   <form>
   
@@ -38,21 +14,21 @@ body {
   
   
   
-  <h1 style="font-size:20px; " align="center">   <label ><b>Enter your Input :</b></label> <input type="text" name="message"   id="user_input" align="center">  &nbsp &nbsp Email Format: <input type="checkbox"  id="myCheck" ></br>
+  <h1 style="font-size:15px; " align="center">   <label ><b>Enter your Input :</b></label> <input type="text" name="message"   id="user_input" align="center">  &nbsp &nbsp Email: <input type="checkbox"  id="myCheck" ></br>
   
   
   
   
   
   
-  <h1 style="font-size:20px; " align="center">   <label ><b>Password : </b></label> <input type="text" name="message"   id="pass_word" align="center"> </br></br>
+  <h1 style="font-size:15px; " align="center">   <label ><b>Password : </b></label> <input type="text" name="message"   id="pass_word" align="center"> </br></br>
   </form>
 
-<font size=5><input type="submit" value="Mock"  onclick="myFunction()" align="center" style="height:40px; width:80px"> <font size=7><input type="reset" value="Clear" align="center" style="height:40px; width:80px"><br/><br/></font>
+<font size=5><input type="submit" value="Mock"  onclick="myFunction()" align="center" style="height:35px; width:70px"> <font size=7><input type="reset" value="Clear" align="center" style="height:35px; width:70px"><br/><br/></font>
 
 <hr>
 </h1>
-<h1 style="font-size:20px; " align="center">  
+<h1 style="font-size:15px; " align="center">  
 <style>
 p.ex1 {
   margin-left: 70%;
@@ -61,7 +37,7 @@ p.ex1 {
   <label >Mocked Result: </label>
     </h1>
     </br>
- <h1 style="font-size:20px; " align="left">    
+ <h1 style="font-size:15px; " align="left">    
 
 
   <p>Mocked Email_id/ User Name : <span id='display'></span></p>
@@ -166,30 +142,6 @@ var ep_pass_symbolchanger=ep_pass_num_change.split('#').join('^');
     
     
   </script>
-<style>
-/* Style the body */
-body {
-  font-family: Arial;
-  margin: 0;
-}
 
-/* Header/Logo Title */
-.Footer {
-  padding: 10px;
-  text-align: center;
-  background:#4682B4;
-  color: white;
-  font-size: 10px;
-}
-
-/* Page Content */
-.content {padding:20px;}
-</style>
-</head>
-<body>
-
-<div class="Footer">
-
-</div>
 </body>
 </html>
