--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html>
-<body style="background-color:White;">
+<body style="background-color:#F5F5F5;">
 <h1 style="font-size:30px; color: Black"align="center">Data Mocker</h1></br>
   <head lang="en">
   <meta charset="UTF-8">
@@ -40,9 +40,9 @@ p.ex1 {
  <h1 style="font-size:15px; " align="left">    
 
 
-  <p>Mocked Email_id/ User Name : <span id='display'></span></p>
+  <p>Mocked Email_id/ User Name : <span style="color:Black; font-size:20px ; font-weight:bold" id='display'></span></p>
   
-  <p>Mocked Password : <span id='display2'></span></p>
+  <p>Mocked Password : <span style="color:Black; font-size:20px ; font-weight:bold" id='display2'></span></p>
 
   </br>
   </br>
@@ -114,8 +114,8 @@ var repl=res.replace(res,'@gmail.com');
 var rem=str3.substring(0,dif);
 var esmall_char_change = rem.split('X').join('K');
 var ecapital_char_change = esmall_char_change.split('x').join('h');
-var enum_change = ecapital_char_change.split('0').join('2');
-var esymbolchanger=enum_change.split('#').join('$');
+var enum_change = ecapital_char_change.split('0').join('w');
+var esymbolchanger=enum_change.split('#').join('u');
 var result=esymbolchanger+repl;
 
 
