--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   
   
-  <h1 style="font-size:15px; " align="center">   <label ><b>Enter your Input :</b></label> <input type="text" name="message"   id="user_input" align="center">  &nbsp &nbsp Email: <input type="checkbox"  id="myCheck" ></br>
+  <h1 style="font-size:15px; " align="center">   <label ><b>Enter your Input :</b></label> <input type="text" name="message"   id="user_input" align="center">  &nbsp &nbsp Email Format : <input type="checkbox"  id="myCheck" ></br>
   
   
   
