--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <body style="background-color:#F5F5F5;">
-<h1 style="font-size:30px; color: Black"align="center">Data Mocker</h1></br>
+<h1 style="font-size:30px; color: Black"align="center">~~~~ Data Mocker ~~~~</h1></br>
   <head lang="en">
   <meta charset="UTF-8">
   </head>
@@ -68,14 +68,14 @@ alert("UserName and Password cannot be empty");
 else{
 var small_char_change = str.split('X').join('A');
 var capital_char_change = small_char_change.split('x').join('b');
-var num_change = capital_char_change.split('0').join('3');
+var num_change = capital_char_change.split('0').join('1');
 var symbolchanger=num_change.split('#').join('*');
 
 
 
 var pass_smallchar_change = str2.split('X').join('Z');
 var pass_capitalchar_change = pass_smallchar_change.split('x').join('m');
-var pass_num_change = pass_capitalchar_change.split('0').join('7');
+var pass_num_change = pass_capitalchar_change.split('0').join('1');
 var pass_symbolchanger=pass_num_change.split('#').join('@');
 
 }
@@ -99,10 +99,6 @@ var dif=e_num-10;
 alert('Email id and password should not be empty');
  process.abort();
 }
- else if(str3==""||str_pass==""){
-alert('Please Enter both the Field');
-
-}
 
 else if(str3.length<10 ){
 alert('Invlaid response..Please check length of email id');
@@ -123,7 +119,7 @@ var result=esymbolchanger+repl;
 
  var ep_pass_smallchar_change = str_pass.split('X').join('W');
 var ep_pass_capitalchar_change = ep_pass_smallchar_change.split('x').join('v');
-var ep_pass_num_change = ep_pass_capitalchar_change.split('0').join('4');
+var ep_pass_num_change = ep_pass_capitalchar_change.split('0').join('1');
 var ep_pass_symbolchanger=ep_pass_num_change.split('#').join('^');
  
 
