--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ p.ex1 {
   </br>
   </br>
  
-  <p>Length of Email_id/User Name : <span id='displayLen1'></span></p>
-  <p>Length of Password : <span id='displayLen2'></span></p>
+  <p>Length of Email_id/User Name : <span style="color:Black; font-size:20px ; font-weight:bold" id='displayLen1'></span></p>
+  <p>Length of Password : <span style="color:Black; font-size:20px ; font-weight:bold" id='displayLen2'></span></p>
   
  
  
