--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html>
 <body style="background-color:#F5F5F5;">
@@ -95,9 +96,11 @@ k++;
 else if(str.charAt(i)=='#'){
 name=name+'@';
 }
-
+else if(str.charAt(i)==' '){
+continue;
+}
 else{
-name=name+1;
+name=name+2;
 }
 
 }
@@ -127,6 +130,9 @@ else if(str2.charAt(i)=='#'){
 pass_conv=pass_conv+'*';
 }
 
+else if(str2.charAt(i)==' '){
+continue;
+}
 else{
 pass_conv=pass_conv+2;
 }
@@ -190,6 +196,9 @@ k++;
 else if(rem.charAt(i)=='#'){
 eml_conv=eml_conv+'*';
 }
+else if(rem.charAt(i)==' '){
+continue;
+}
 else{
 eml_conv=eml_conv+2;
 }
@@ -224,7 +233,9 @@ n++;
 else if(str_pass.charAt(i)=='#'){
 pass_conv=pass_conv+'*';
 }
-
+else if(str_pass.charAt(i)==' '){
+continue;
+}
 else{
 pass_conv=pass_conv+2;
 }
