--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <!DOCTYPE html>
 <html>
-<body style="background-color:#F5F5F5;">
+<body oncontextmenu="return false" style="background-color:#F5F5F5;">
 <h1 style="font-size:30px; color: Black"align="center">~~~~ Data Mocker ~~~~</h1></br>
   <head lang="en">
   <meta charset="UTF-8">
