--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ continue;
 
 
 }
-if(count1==0&&count1==0&&count2==0){
+if(count==0&&count1==0&&count2==0){
 document.getElementById('display3').innerHTML = online_name.toString();
        document.getElementById('display').innerHTML = name.toString();
          document.getElementById('display2').innerHTML = pass_conv.toString();
