--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
   <h1 style="font-size:15px; " align="center">   <label ><b>Password : </b></label> <input type="text" name="message"   id="pass_word" align="center"> </br></br>
   </form>
 
-<font size=5><input type="submit" value="Mock"  onclick="myFunction()" align="center" style="height:35px; width:70px"> <font size=7><input type="reset" value="Clear" id="myclear" onclick="clearFunction()" align="center" style="height:35px; width:70px"> <input type="button" align="center" style="height:35px; width:80px" onclick="window.location.href = 'https://karthikk12.github.io/my-page/';" value="MFA Page"/> </font>
-
+<font size=5><input type="submit" value="Mock"  onclick="myFunction()" align="center" style="height:35px; width:70px"> <font size=7><input type="reset" value="Clear" id="myclear" onclick="clearFunction()" align="center" style="height:35px; width:70px"> <input type="button" align="center" style="height:35px; width:80px" onclick="window.location.href = 'https://karthikk12.github.io/MyFirstRepo1/';" value="MFA Page"/> </font>
 
 
 <hr>
