--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html>
 <body  onload="startdate();startTime();" style="background-color:#F5F5F5;">
@@ -24,7 +25,7 @@
   
   
   
-  <p style="text-align:center; font-size:25px"><strong style="font-size:25px">Enter your Input :</strong></p></br>
+  <p style="text-align:center; font-size:25px"><strong style="font-size:25px">Enter your Input :</strong></p>
   
   
   <p  style="text-align:center"; style="font-size:15px;"  align="center">   <label style="font-size:15px;" ><b>Online Id :</b></label> <input type="text" name="message"   id="online_input" align="center">(If applicable)</p>
