--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html>
 <body  onload="startdate();startTime();" style="background-color:#F5F5F5;">
@@ -158,10 +159,10 @@ j++;
 }
 
 else if(str0.charAt(i)=='X'){
-var chr = String.fromCharCode(97 + k).toUpperCase();
+var chr = String.fromCharCode(65 + k);
 if(k==26){
 k=1;
-var chr = String.fromCharCode(97 + k).toUpperCase();
+var chr = String.fromCharCode(65 + k);
 online_name=online_name+chr;
 k++;
 }
@@ -234,10 +235,10 @@ j++;
 }
 
 else if(str.charAt(i)=='X'){
-var chr = String.fromCharCode(97 + k).toUpperCase();
+var chr = String.fromCharCode(65 + k);
 if(k==26){
 k=1;
-var chr = String.fromCharCode(97 + k).toUpperCase();
+var chr = String.fromCharCode(65 + k);
 name=name+chr;
 k++;
 }
@@ -297,10 +298,10 @@ p++;
 }
 
 else if(str2.charAt(i)=='X'){
-var chr = String.fromCharCode(97 + q).toUpperCase();
+var chr = String.fromCharCode(65 + q);
 if(q==26){
 q=1;
-var chr = String.fromCharCode(97 + q).toUpperCase();
+var chr = String.fromCharCode(65 + q);
 pass_conv=pass_conv+chr;
 q++;
 }
@@ -416,10 +417,10 @@ j++;
 }
 
 else if(str0.charAt(i)=='X'){
-var chr = String.fromCharCode(97 + k).toUpperCase();
+var chr = String.fromCharCode(65 + k);
 if(k==26){
 k=1;
-var chr = String.fromCharCode(97 + k).toUpperCase();
+var chr = String.fromCharCode(65 + k);
 online_name=online_name+chr;
 k++;
 }
@@ -486,10 +487,10 @@ j++;
 }
 
 else if(rem.charAt(i)=='X'){
-var chr = String.fromCharCode(97 + k).toUpperCase();
+var chr = String.fromCharCode(65 + k);
 if(k==26){
 k=1;
-var chr = String.fromCharCode(97 + k).toUpperCase();
+var chr = String.fromCharCode(65 + k);
 eml_conv=eml_conv+chr;
 k++;
 }
@@ -555,10 +556,10 @@ m++;
 }
 
 else if(str_pass.charAt(i)=='X'){
-var chr = String.fromCharCode(97 + n).toUpperCase();
+var chr = String.fromCharCode(65 + n);
 if(n==26){
 n=1;
-var chr = String.fromCharCode(97 + n).toUpperCase();
+var chr = String.fromCharCode(65 + n);
 pass_conv=pass_conv+chr;
 n++;
 }
