--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html>
 <body  onload="startdate();startTime();" style="background-color:#F5F5F5;">
@@ -372,6 +373,7 @@ var str9=start_em_str9.trim();
  var str3=start_str3.trim();
  var str_pass=start_str_pass.trim();
 
+ var str9length=str9.length;
 var passlength=str_pass.length;
 var e_num=str3.length;
 var dif=e_num-10;
@@ -400,9 +402,9 @@ var char_num=1;
 var online_name='';
 var result=null;
 
-for(var i=0;i<strlength0;i++){
+for(var i=0;i<str9length;i++){
 
-if(str0.charAt(i)=='x'){
+if(str9.charAt(i)=='x'){
 var chr = String.fromCharCode(97 + j);
 if(j==26){
 j=1;
@@ -417,7 +419,7 @@ j++;
 }
 }
 
-else if(str0.charAt(i)=='X'){
+else if(str9.charAt(i)=='X'){
 var chr = String.fromCharCode(65 + k);
 if(k==26){
 k=1;
@@ -432,14 +434,14 @@ k++;
 }
 }
 
-else if(str0.charAt(i)=='#'){
+else if(str9.charAt(i)=='#'){
 online_name=online_name+'@';
 }
-else if(str0.charAt(i)==' '){
+else if(str9.charAt(i)==' '){
 continue;
 }
 
-else if(str0.charAt(i)>=0&&str0.charAt(i)<=9){
+else if(str9.charAt(i)>=0&&str9.charAt(i)<=9){
 if(number_use==10){
 number_use=1;
 online_name=online_name+number_use;
@@ -450,7 +452,7 @@ online_name=online_name+number_use;
 number_use++;
 }
 }
-else if(str0.charAt(i)!='x' || str.charAt(i)!='X'){
+else if(str9.charAt(i)!='x' || str9.charAt(i)!='X'){
 count4++;
 continue;
 }
