--- a/index.html
+++ b/index.html
@@ -1,15 +1,4 @@
 
-
-
-
-
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html>
 <body  onload="startdate();startTime();" style="background-color:#F5F5F5;">
@@ -42,10 +31,17 @@
   
   
   
-  <h1 style="font-size:15px; " align="center">   <label ><b>Password : </b></label> <input type="text" name="message"   id="pass_word" align="center"> </br></br>
+  <h1 style="font-size:15px; " align="center">   <label ><b>Password : </b></label> <input type="text" name="message"   id="pass_word" align="center"> </br>
   </form>
 
-<font size=5><input type="submit" value="Mock"  onclick="myFunction()" align="center" style="height:35px; width:70px"> <font size=7><input type="reset" value="Clear" id="myclear" onclick="clearFunction()" align="center" style="height:35px; width:70px"> <input type="button" align="center" style="height:35px; width:80px" onclick="window.location.href = 'https://karthikk12.github.io/MyFirstRepo1/';" value="MFA Page"/> </font>
+<font size=5><input type="submit" value="Mock"  onclick="myFunction()" align="center" style="height:35px; width:70px"> <font size=7><input type="reset" value="Clear" id="myclear" onclick="clearFunction()" align="center" style="height:35px; width:70px"> </font>
+
+<div>
+
+<div  style="float:left;"><input type="button" align="center" style="height:30px; width:122px" onclick="window.location.href = 'https://karthikk12.github.io/error_code/';" value="Error_Code Finder"/> </font></div>
+
+<div align="right"><input type="button" align="center" style="height:30px; width:120px" onclick="window.location.href = 'https://karthikk12.github.io/MyFirstRepo1/';" value="MFA Page"/> </font></div>
+</div>
 
 
 <hr>
@@ -203,15 +199,6 @@ continue;
 }
 
 
-
-
-
-
-
-
-
-
-
 var j=1;
 var k=1;
 var num=2;
@@ -360,11 +347,8 @@ document.getElementById('display3').innerHTML = online_name.toString();
 
 	
 	}
-	
-	
-	
-	
-	  if(document.getElementById("myCheck").checked==true){
+
+  if(document.getElementById("myCheck").checked==true){
      
 	 var start_em_str9=document.getElementById("online_input").value;
      var start_str3 = document.getElementById("user_input").value;
@@ -459,13 +443,6 @@ continue;
 }
 
 }
-
-
-
-
-
-
-
 
 
 var j=1;
