--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@ p.ex1 {
   <p>Mocked Email_id/ User Name : <span style="color:Black; font-size:20px ; font-weight:bold" id='display'></span></p>
   
   <p>Mocked Password : <span style="color:Black; font-size:20px ; font-weight:bold" id='display2'></span></p>
-  </br>
-  </br>
+  <hr style="border-top: dotted 1px;" />
   
  <p style="text-align:left;">Length of Online ID : <span style="color:Black; font-size:20px ; font-weight:bold" id='displayLen3'></p>
   <p>Length of Email_id/User Name : <span style="color:Black; font-size:20px ; font-weight:bold" id='displayLen1'></span></p>
