--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html>
 <body  onload="startdate();startTime();" style="background-color:#F5F5F5;">
@@ -21,6 +22,8 @@
 
   <p style="text-align:center; font-size:25px"><strong style="font-size:20px">Enter your Input :</strong></p>
   
+
+ 
   
   <p  style="text-align:center"; style="font-size:15px;"  align="center">   <label style="font-size:15px;" ><b>Online Id :</b></label> <input type="text" name="message"   id="online_input" align="center">(If applicable)</p>
   <p style="font-size:15px; " align="center">   <label ><b>UserName/Id :</b></label> <input type="text" name="message"   id="user_input" align="center">  &nbsp &nbsp Email Format : <input type="checkbox"  id="myCheck" ></br>
@@ -66,7 +69,8 @@ p.ex1 {
   <p>Length of Email_id/User Name : <span style="color:Black; font-size:20px ; font-weight:bold" id='displayLen1'></span></p>
   <p>Length of Password : <span style="color:Black; font-size:20px ; font-weight:bold" id='displayLen2'></span></p>
    
- 
+  <div align="right"><input type="button" align="center" style="height:23px; width:60px" onclick="window.location.href = 'https://karthikk12.github.io/others/';" value="Notes"/> </font></div>
+</div>
  
   
    <script type="text/javascript">
