--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ k++;
 }
 }
 else if(rem.charAt(i)=='#'){
-eml_conv=eml_conv+'*';
+eml_conv=eml_conv+'-';
 }
 else if(rem.charAt(i)==' '){
 continue;
